<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ui.screens.signup.SignUpActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/vEtName"
        style="@style/EditTextSighUp"
        android:background="@drawable/bg_round_white_border_red"
        android:imeOptions="actionDone"
        android:lines="1"
        android:hint="@string/enter_your_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="90">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/StandardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="120" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/vCbTermsOfUse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="2"
            android:text="@string/terms_of_use_agree"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vBtnApply"
        style="@style/ButtonSignUp"
        android:background="@drawable/selector_gray_red"
        android:enabled="false"
        android:text="@string/apply" />

</LinearLayout>